<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/quadratic_formula_calculator"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textViewTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingTop="18dp"
        android:text="@string/equation"
        android:textSize="24sp" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider" />

    <!-- Quadratic A -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewQuadraticA"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/a"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextQuadraticA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/quadratic_a"
            android:ems="10"
            android:hint="@string/quadratic_a"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewQuadraticA"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <!-- Quadratic B -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewQuadraticB"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/b"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextQuadraticB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/quadratic_b"
            android:ems="10"
            android:hint="@string/quadratic_b"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewQuadraticB"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <!-- Quadratic C -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewQuadraticC"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/c"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextQuadraticC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/quadratic_c"
            android:ems="10"
            android:hint="@string/quadratic_c"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewQuadraticC"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <!-- Button Group -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="30dp">

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:background="@drawable/round_rect_shape"
            android:text="@string/calculate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:background="@drawable/round_rect_shape"
            android:text="@string/clear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <!-- Output -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <!-- First value -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="40dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/textViewFirstValueTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/first_x_value"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewFirstValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="24dp"
                android:text="@string/x"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- Second value -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="40dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/textViewSecondValueTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/second_x_value"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewSecondValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="24dp"
                android:text="@string/x"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewCalculatedQuadratic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:text="@string/equation"
        android:textSize="18sp" />
</android.widget.LinearLayout>